# RType

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: automated-tests.yml  automated_tests_client.yml  automated_tests_ecs.yml  automated_tests_server.yml  cmake_compilation.yml  create_release.yml  rtype.yml
client/: CMakeLists.txt  README.md
client/ethan/: Game.cpp  Player.cpp  Player.hpp
client/include/: ControllableSystem.hpp  EventsCustom.hpp  Game.hpp  GameEvents.hpp  MovementSystem.hpp  Network.hpp  Player.hpp  Protocol.hpp  UDPClient.hpp
client/include/systems/: Controllable.hpp  Movement.hpp  Spawner.hpp
client/src/: ControllableSystem.cpp  ErrorHandling.cpp  Game.cpp  LoadChooseName.cpp  LoadChooseRoom.cpp  LoadCreateRoom.cpp  LoadGame.cpp  LoadMenu.cpp  LoadSettings.cpp  Main.cpp  MovementSystem.cpp  Network.cpp  Player.cpp  UDPClient.cpp
client/src/scenes/: LoadChooseName.cpp  LoadGame.cpp  LoadGameOver.cpp  LoadGameWin.cpp  LoadMenu.cpp  LoadSettings.cpp
client/src/systems/: Controllable.cpp  Movement.cpp  Spawner.cpp
config/: inGame.json
docs/: CMakeLists.txt  Doxyfile.in
ecs/: CMakeLists.txt  README.md
ecs/include/: Archetype.hpp  AssetManager.hpp  Buffer.hpp  ComponentArray.hpp  ComponentManager.hpp  ComponentsVector.hpp  Coordinator.hpp  Core.hpp  CustomExceptions.hpp  Entity.hpp  EntityManager.hpp  Events.hpp  GameEngine.hpp  IComponentArray.hpp  Macros.hpp  Message.hpp  Network.hpp  NetworkStruct.hpp  ParserJson.hpp  Scene.hpp  SceneManager.hpp  System.hpp  SystemManager.hpp  Window.hpp  World.hpp
ecs/include/components/: Acceleration.hpp  Animation.hpp  Clickable.hpp  Collision.hpp  Color.hpp  Components.hpp  Controllable.hpp  Damage.hpp  FontSize.hpp  Health.hpp  Hitbox.hpp  Modifier.hpp  Music.hpp  Name.hpp  Parallax.hpp  Position.hpp  Rectangle.hpp  Rotation.hpp  Scale.hpp  Shooter.hpp  Sound.hpp  Sprite.hpp  Submit.hpp  Tag.hpp  Text.hpp  TextColor.hpp  TextInput.hpp  Vector2.hpp  Velocity.hpp
ecs/include/systems/: Clickable.hpp  Collision.hpp  Controllable.hpp  Destruction.hpp  EventManager.hpp  ISystem.hpp  Input.hpp  KeyboardInput.hpp  Life.hpp  MainSystem.hpp  Modifier.hpp  Movement.hpp  Music.hpp  Parallax.hpp  Sound.hpp  Spawner.hpp  Submit.hpp  Systems.hpp
ecs/include/systems/rendering/: Animation.hpp  AnimationSprite.hpp  Name.hpp  Rectangle.hpp  Render.hpp  Rendering.hpp  Sprite.hpp  Text.hpp  TextInput.hpp
ecs/src/: Archetype.cpp  Buffer.cpp  ParserJson.cpp  SceneManager.cpp  World.cpp
ecs/src/systems/: Clickable.cpp  Collision.cpp  Controllable.cpp  Destruction.cpp  Input.cpp  KeyboardInput.cpp  Life.cpp  Modifier.cpp  Movement.cpp  Music.cpp  Parallax.cpp  Sound.cpp  Spawner.cpp  Submit.cpp
ecs/src/systems/rendering/: Animation.cpp  AnimationSprite.cpp  Name.cpp  Rectangle.cpp  Render.cpp  Sprite.cpp  Text.cpp  TextInput.cpp
pong/: CMakeLists.txt  README.md
pong/include/: Events.hpp  Pong.hpp
pong/include/systems/: Collision.hpp  Controllable.hpp  Movement.hpp
pong/scripts/: build_pong.bat  build_pong.sh  uninstall_pong.bat  uninstall_pong.sh
pong/src/: LoadEnd.cpp  LoadGame.cpp  LoadMenu.cpp  LoadSettings.cpp  Pong.cpp  main.cpp
pong/src/systems/: Collision.cpp  Controllable.cpp  Movement.cpp
scripts/: build_project.bat  build_project.sh  install_dependencies.sh  install_vcpkg.sh  uninstall.bat  uninstall.sh
server/: CMakeLists.txt  README.md  RFC.md
server/include/: Client.hpp  Entity.hpp  EntityServer.hpp  EntityTemplate.hpp  Message.hpp  MessageType.hpp  Network.hpp  Player.hpp  Protocol.hpp  Room.hpp  Rtype.hpp  Server.hpp  ServerRooms.hpp  UDPServer.hpp  WaveManager.hpp
server/include/systems/: Movement.hpp
server/include/tony/: Message.hpp  Player.hpp  Rtype.hpp  ServerRooms.hpp
server/src/: CheckArguments.cpp  Entity.cpp  EntityTemplate.cpp  ErrorHandling.cpp  Main.cpp  Message.cpp  Player.cpp  Room.cpp  Rtype.cpp  Server.cpp  ServerRooms.cpp  UDPServer.cpp  WaveManager.cpp
server/src/systems/: Movement.cpp
server/src/tony/: Main.cpp  Player.cpp  Rtype.cpp  ServerRooms.cpp
tests/ecs/: CMakeLists.txt
tests/ecs/include/: StderrCapture.hpp  StdoutCapture.hpp
tests/ecs/src/: ArchetypeTest.cpp  ComponentsVectorTest.cpp  CustomExceptionsTest.cpp  WorldTest.cpp
tests/server/: CMakeLists.txt
tests/server/include/: Network.hpp  Rtype.hpp
